changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -1868,6 +1868,15 @@
             </span>
           </span>
         </div>
+        <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/dealerDetails">
+          <span class="menu-link">
+            <span class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span class="menu-title">Dealer Contact
+            </span>
+          </span>
+        </div>
 
         <!-- <div class="menu-item menu-accordion" routerLinkActive="active" routerLink="/admin/reports">
           <span class="menu-link">
