--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
@@ -194,7 +194,7 @@
                       </td>
 
                       <td class="border-gray">
-                        <span *ngIf="data.manualCrNumber == ''">
+                        <!-- <span *ngIf="data.manualCrNumber == ''">
                         </span>
                         <span *ngIf="data.manualCrNumber != ''">
                           <span *ngIf="data.manualCrNumber != 'null'">
@@ -202,11 +202,17 @@
                           </span>
                           <span *ngIf="data.manualCrNumber == 'null'">
                           </span>
-                        </span>
+                        </span> -->
+                        
+                        <div [ngSwitch]="data.manualCrNumber">
+                          <div *ngSwitchCase="''"> </div>
+                          <div *ngSwitchCase="'null'"> </div>
+                          <div *ngSwitchDefault>{{data.manualCrNumber}}</div>
+                        </div>
                       </td>
 
                       <td class="border-gray">
-                        <span *ngIf="data.purpose == 'LUBE' ">
+                        <!-- <span *ngIf="data.purpose == 'LUBE' ">
                           {{data.productName}}
                         </span>
                         <span *ngIf="data.purpose == 'CREDIT' ">
@@ -214,7 +220,14 @@
                         </span>
                         <span *ngIf="data.purpose == 'AdvAmt' ">
                           ADVANCE
-                        </span>
+                        </span> -->
+
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'LUBE'"> {{data.productName}} </div>
+                          <div *ngSwitchCase="'CREDIT'"> {{data.productName}} </div>
+                          <div *ngSwitchCase="'AdvAmt'"> ADVANCE </div>
+                          <div *ngSwitchDefault> {{data.productName}} </div>
+                        </div>
                       </td>
                       <td class="border-gray">
                         <span *ngIf="data.purpose == 'CREDIT' ">
@@ -222,7 +235,7 @@
                         </span>
                       </td>
                       <td class="border-gray">
-                        <span *ngIf="data.purpose == 'CREDIT' ">
+                        <!-- <span *ngIf="data.purpose == 'CREDIT' ">
                           <span *ngIf='data.productCategory == "CNG" '>
                             {{data.actualCreditQuantity | number:'1.2-2'}} Kg
                           </span>
@@ -232,7 +245,19 @@
                         </span>
                         <span *ngIf="data.purpose == 'LUBE' ">
                           {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}}
-                        </span>
+                        </span> -->
+                        
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'CREDIT'">
+                            <div [ngSwitch]="data.productCategory">
+                              <div *ngSwitchCase="'CNG'"> {{data.actualCreditQuantity | number:'1.2-2'}} Kg</div>
+                              <div *ngSwitchDefault> {{data.actualCreditQuantity | number:'1.2-2'}} Ltr</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'LUBE'">
+                            {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}} 
+                          </div>
+                      </div>
                       </td>
                       <td class="border-gray" style="background: #ffc0cb94 !important;">
                         {{data.creditAmount | number:'1.2-2'}}
