--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
@@ -189,7 +189,7 @@
                       </td>
 
                     <td>
-                        <span *ngIf="data.manualCrNumber == ''">
+                        <!-- <span *ngIf="data.manualCrNumber == ''">
                         </span>
                         <span *ngIf="data.manualCrNumber != ''">
                             <span *ngIf="data.manualCrNumber != 'null'">
@@ -197,10 +197,17 @@
                             </span>
                             <span *ngIf="data.manualCrNumber == 'null'">
                             </span>
-                        </span>
+                        </span> -->
+
+                        
+                        <div [ngSwitch]="data.manualCrNumber">
+                          <div *ngSwitchCase="''"></div>
+                          <div *ngSwitchCase="'null'"></div>
+                          <div *ngSwitchDefault>{{data.manualCrNumber}}</div>
+                        </div>
                     </td>
                     <td>
-                        <span *ngIf="data.purpose == 'CREDIT'">
+                        <!-- <span *ngIf="data.purpose == 'CREDIT'">
                             <span *ngIf="data.vehicleNumber == 'undefined'">
 
                             </span>
@@ -218,10 +225,27 @@
                         </span>
                         <span *ngIf="data.purpose == 'AdvAmt'">
                             {{data.advName}} {{data.advMobile}}
-                        </span>
+                        </span> -->
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'CREDIT'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              <div *ngSwitchCase="'undefined'"></div>
+                              <div *ngSwitchDefault>{{ data.vehicleNumber }}</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'LUBE'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              <div *ngSwitchCase="'undefined'"> -</div>
+                              <div *ngSwitchDefault>{{ data.vehicleNumber }}</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'AdvAmt'">
+                            {{data.advName}} {{data.advMobile}}
+                          </div>
+                        </div>
                     </td>
                     <td>
-                        <span *ngIf="data.purpose == 'LUBE' ">
+                        <!-- <span *ngIf="data.purpose == 'LUBE' ">
                             {{data.productName}} {{data.lubeName}}
                         </span>
                         <span *ngIf="data.purpose == 'CREDIT' ">
@@ -229,12 +253,20 @@
                         </span>
                         <span *ngIf="data.purpose == 'AdvAmt' ">
                             ADVANCE
-                        </span>
+                        </span> -->
+
+                        
+                    <div [ngSwitch]="data.purpose">
+                      <div *ngSwitchCase="'LUBE'">{{data.productName}} {{data.lubeName}}</div>
+                      <div *ngSwitchCase="'CREDIT'">{{data.productName}}</div>
+                      <div *ngSwitchCase="'AdvAmt'">ADVANCE</div>
+                      <div *ngSwitchDefault>{{data.productName}}</div>
+                    </div>
 
                     </td>
                     <td> {{data.productRate}} </td>
                     <td>
-                        <span *ngIf="data.purpose == 'CREDIT' ">
+                        <!-- <span *ngIf="data.purpose == 'CREDIT' ">
                             <span *ngIf='data.productCategory == "CNG" '>
                                 {{data.actualCreditQuantity | number:'1.2-2'}} Kg
                             </span>
@@ -244,7 +276,21 @@
                         </span>
                         <span *ngIf="data.purpose == 'LUBE' ">
                             {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}}
-                        </span>
+                        </span> -->
+
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'CREDIT'">
+                            <div [ngSwitch]="data.productCategory">
+                              <div *ngSwitchCase="'CNG'"> {{data.actualCreditQuantity | number:'1.2-2'}} Kg</div>
+                              <div *ngSwitchDefault> {{data.actualCreditQuantity | number:'1.2-2'}} Ltr</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'LUBE'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}}
+                            </div>
+                          </div>
+                        </div>
                     </td>
 
                     <td>
@@ -594,7 +640,7 @@
                     <td> {{data.estimatedRefuelDate | date:"d MMM, yyyy"}} </td> 
  
                     <td>
-                        <span *ngIf="data.manualCrNumber == ''">
+                        <!-- <span *ngIf="data.manualCrNumber == ''">
                         </span>
                         <span *ngIf="data.manualCrNumber != ''">
                             <span *ngIf="data.manualCrNumber != 'null'">
@@ -602,10 +648,16 @@
                             </span>
                             <span *ngIf="data.manualCrNumber == 'null'">
                             </span>
-                        </span>
+                        </span> -->
+                        
+                        <div [ngSwitch]="data.manualCrNumber">
+                          <div *ngSwitchCase="''"></div>
+                          <div *ngSwitchCase="'null'"></div>
+                          <div *ngSwitchDefault>{{data.manualCrNumber}}</div>
+                        </div>
                     </td>
                     <td>
-                        <span *ngIf="data.purpose == 'CREDIT'">
+                        <!-- <span *ngIf="data.purpose == 'CREDIT'">
                             <span *ngIf="data.vehicleNumber == 'undefined'">
 
                             </span>
@@ -623,10 +675,28 @@
                         </span>
                         <span *ngIf="data.purpose == 'AdvAmt'">
                             {{data.advName}} {{data.advMobile}}
-                        </span>
+                        </span> -->
+                        
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'CREDIT'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              <div *ngSwitchCase="'undefined'"></div>
+                              <div *ngSwitchDefault>{{ data.vehicleNumber }}</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'LUBE'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              <div *ngSwitchCase="'undefined'"> -</div>
+                              <div *ngSwitchDefault>{{ data.vehicleNumber }}</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'AdvAmt'">
+                            {{data.advName}} {{data.advMobile}}
+                          </div>
+                        </div>
                     </td>
                     <td>
-                        <span *ngIf="data.purpose == 'LUBE' ">
+                        <!-- <span *ngIf="data.purpose == 'LUBE' ">
                             {{data.productName}} {{data.lubeName}}
                         </span>
                         <span *ngIf="data.purpose == 'CREDIT' ">
@@ -634,12 +704,19 @@
                         </span>
                         <span *ngIf="data.purpose == 'AdvAmt' ">
                             ADVANCE
-                        </span>
+                        </span>    -->
+
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'LUBE'">{{data.productName}} {{data.lubeName}}</div>
+                          <div *ngSwitchCase="'CREDIT'">{{data.productName}}</div>
+                          <div *ngSwitchCase="'AdvAmt'">ADVANCE</div>
+                          <div *ngSwitchDefault>{{data.productName}}</div>
+                        </div>
 
                     </td>
                     <td> {{data.productRate}} </td>
                     <td>
-                        <span *ngIf="data.purpose == 'CREDIT' ">
+                        <!-- <span *ngIf="data.purpose == 'CREDIT' ">
                             <span *ngIf='data.productCategory == "CNG" '>
                                 {{data.actualCreditQuantity | number:'1.2-2'}} Kg
                             </span>
@@ -649,7 +726,21 @@
                         </span>
                         <span *ngIf="data.purpose == 'LUBE' ">
                             {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}}
-                        </span>
+                        </span> -->
+                        
+                        <div [ngSwitch]="data.purpose">
+                          <div *ngSwitchCase="'CREDIT'">
+                            <div [ngSwitch]="data.productCategory">
+                              <div *ngSwitchCase="'CNG'"> {{data.actualCreditQuantity | number:'1.2-2'}} Kg</div>
+                              <div *ngSwitchDefault> {{data.actualCreditQuantity | number:'1.2-2'}} Ltr</div>
+                            </div>
+                          </div>
+                          <div *ngSwitchCase="'LUBE'">
+                            <div [ngSwitch]="data.vehicleNumber">
+                              {{data.actualCreditQuantity | number:'1.2-2'}} {{data.lubeUnit}}
+                            </div>
+                          </div>
+                        </div>
                     </td>
 
                     <td>
